# argot-cmd

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  STABILITY.md  release-plz.toml
.github/workflows/: ci.yml  coverage.yml  release-plz.yml
argot-derive/src/: lib.rs
docs/: cookbook.md  error-handling.md  mcp-setup.md  middleware-guide.md  migrating-from-clap.md  validation-patterns.md
examples/: layered_commands.rs
scripts/: bump-version.sh
src/: input_validation.rs  lib.rs
src/cli/: mod.rs
src/middleware/: mod.rs
src/model/: command.rs  flag.rs  mod.rs
src/parser/: mod.rs
src/query/: mod.rs
src/render/: mod.rs
src/source/: embedded.rs  markdown.rs  mod.rs
tests/: derive_test.rs  integration_test.rs
tests/ui/: README.md  both_positional_and_flag.rs  enum_not_supported.rs  missing_kind.rs
