[workspace]
members = [".", "argot-derive"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.94.0"
license = "MIT"
repository = "https://github.com/platinummonkey/argot"

[package]
name = "argot"
version = "0.1.1"
edition = "2021"
rust-version = "1.94.0"
description = "An agent-first command interface framework for Rust"
license = "MIT"
repository = "https://github.com/platinummonkey/argot"
homepage = "https://github.com/platinummonkey/argot"
documentation = "https://docs.rs/argot"
readme = "README.md"
keywords = ["cli", "agent", "mcp", "commands", "automation"]
categories = ["command-line-interface", "development-tools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
async = []
mcp = []
derive = ["dep:argot-derive"]
fuzzy = ["dep:fuzzy-matcher"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
fuzzy-matcher = { version = "0.3", optional = true }
argot-derive = { path = "argot-derive", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
