[workspace]
members = [".", "argot-cmd-derive"]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.94.0"
license = "MIT"
repository = "https://github.com/platinummonkey/argot-cmd"

[package]
name = "argot-cmd"
version = "0.2.0"
edition = "2021"
rust-version = "1.94.0"
description = "An agent-first command interface framework for Rust"
license = "MIT"
repository = "https://github.com/platinummonkey/argot-cmd"
homepage = "https://github.com/platinummonkey/argot-cmd"
documentation = "https://docs.rs/argot-cmd"
readme = "README.md"
keywords = ["cli", "agent", "mcp", "commands", "automation"]
categories = ["command-line-interface", "development-tools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
async = []
mcp = []
derive = ["dep:argot-cmd-derive"]
fuzzy = ["dep:fuzzy-matcher"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
fuzzy-matcher = { version = "0.3", optional = true }
argot-cmd-derive = { path = "argot-cmd-derive", version = "0.2", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
